style.css
/* ... */
td.menu {
	padding: 0px;
	width: 25%;
	border-width: 0px;
	margin: 0px;
}
a.menu {
	display: inline-block;
	font-family: Raleway;
	font-weight: 200;
	width: 100%;
	text-align: center;
	height: 3.2vw;
	line-height: 3.2vw;
	background-color: black;
	font-size: 1.2vw;
}
a.current {
	text-decoration: underline;
	cursor: default;
}
input.menu {
	width: 17vw;
	position: absolute;
	top: 0.2vw;
	right: 3vw;
	height: 1.5vw;
	border: solid white;
	border-width: 0 0 1px 0;
	margin: 0.3vw;
	padding: 0.3vw;
	background-color: black;
	color: white;
	text-align: left;
	font-family: Raleway;
	outline: none;
	font-size: 1.1vw;
}
/* scroll stuff */
#scroll {
	position: fixed;
	width: 9vw;
	transform: translateY(-50%);
	height: 14vw;
	top: 50vh;
	right: 2.63vw;
	z-index: 100;
}
#scrollbar {
	position: absolute;
	width: 2px;
	height: 100%;
	top: 0;
	background-color: white;
	right: 0;
	opacity: 0.6;
	margin: 0; padding: 0;
}
.dot {
	position: absolute;
	background-color: white;
	transform: translate(50%, -50%);
	height: 1.4vw;
	width: 1.4vw;
	position: absolute;
	top: 0%;
	right: 0;
 	border-radius: 50%;
	margin: 0; padding: 0;
	transition: 0.2s ease;
}
p.scrolllabel {
	position: absolute;
	font-family: Raleway;
	font-weight: 200;
	font-size: 1.2vw;
	transform: translateY(-50%);
	right: 2vw;
	margin: 0; padding: 0;
	cursor: pointer;
	transition: 0.5s ease;
}
#scroll1{top: 0%;}
#scroll2{top: 20%;}
#scroll3{top: 40%;}
#scroll4{top: 60%;}
#scroll5{top: 80%;}
#scroll6{top: 100%;}
div.stuff {
	margin: 0;
	padding: 0;
	position: relative;
	left: 0;
	top: 0;
	width: 100vw;
	background-color: #171717;
}
/* title page */
div.top {
	position: relative;
	width: 100vw;
	height: 100vh;
}
#topimg {
	opacity: 0;
	position: absolute;
	width: 100vw;
	height: 100vh;
	top: 0;
	object-fit: cover;
}
#heading1 {
	font-family: Poiret One;
	color: white;
	font-size: 6vw;
	text-align: center;
	position: absolute;
	transform: translateY(-50%);
	top: 48vh;
	margin: 0; padding: 0;
	width: 100%;
	font-weight: 200;
	letter-spacing: 1.7vw;
	opacity: 0;
}
#heading2 {
	font-family: Raleway;
	color: white;
	font-size: 1.7vw;
	text-align: center;
	position: absolute;
	top: 53vh;
	width: 100%;
	letter-spacing: 0.4vw;
	opacity: 0;
}
#learnmore {
	position: absolute;
	transform: translateX(-50%);
	left: 50vw;
	bottom: 3.5vw;
	width: 17vw;
	height: 3vw;
	line-height: 3vw;
	text-align: center;
	font-size: 1.5vw;
	color: white;
	font-family: Raleway;
	font-weight: 200;
	letter-spacing: 0.4vw;
	background-color: black;
	border: 1px solid white;
	text-align: center;
	opacity: 0;
	transition: 0.3s ease;
	cursor: pointer;
}
#arrow1 {
	position: absolute;
	background-color: white;
	width: 3vw;
	height: 2px;
	transform-origin: right;
	transform: rotate(45deg);
	bottom: 2vw;
	right: 50vw;
	opacity: 0;
}
#arrow2 {
	position: absolute;
	background-color: white;
	width: 3vw;
	height: 2px;
	transform-origin: left;
	transform: rotate(315deg);
	bottom: 2vw;
	left: 50vw;
	opacity: 0;
}
@keyframes change{
	0%{
		opacity: 0.1;
	}
	50% {
		opacity: 0.6;
	}
	100%{
		opacity: 0.1;
	}
}
/* synopsis page */
div.synopsis {
	position: relative;
	width: 100vw;
	height: 100vh;
}
#synimg {
	position: absolute;
	width: 100vw;
	height: 100vh;
	opacity: 0.2;
	object-fit: cover;
}
div.synopsiscontent {
	position: absolute;
	width: 100vw;
	height: 40vw;
	transform: translateY(-50%);
	top: 50vh;
}
#heading3 {
	position: absolute;
	width: 100%;
	top: 0;
	font-size: 4vw;
	color: white;
	font-family: Poiret One;
	text-align: center;
	letter-spacing: 1.3vw;
	margin: 0; padding: 0;
}
#under3 {
	position: absolute;
	width: 36vw;
	left: 32vw;
	height: 2px;
	background-color: white;
	top: 6vw;
}
#syntext {
	position: absolute;
	top: 7vw;
	width: 50vw;
	padding: 0 25vw;
	text-align: justify;
	color: white;
	font-family: Raleway;
	line-height: 2.5vw;
	font-size: 1.5vw;
	font-weight: 200;
}
/* featured page */
div.featured {
	position: relative;
	width: 100vw;
	height: 100vh;
}
div.featuredstuff {
	position: absolute;
	width: 100vw;
	top: 4.5vw;
	height: 46vw;
	transform: translateY(-50%);
	top: 50vh;
}
#heading4 {
	position: absolute;
	width: 100%;
	top: 0;
	font-size: 2.8vw;
	color: white;
	font-family: Poiret One;
	text-align: center;
	letter-spacing: 0.8vw;
	margin: 0; padding: 0;
}
#under4 {
	position: absolute;
	width: 44vw;
	left: 28vw;
	height: 1px;
	background-color: white;
	top: 4.5vw;
}
#featuredcontent {
	position: absolute;
	width: 100vw;
	height: 43.5vw;
	left: 0px;
	top: 2.5vw;
}
#Magus {
	position: absolute;
	object-fit: cover;
	width: 30vw;
	height: 35vw;
	top: 3.8vw;
	left: 15vw;
}
#Maguslbl {
	font-size: 1.5vw;
	color: white;
	font-family: Raleway;
	font-weight: 100;
	position: absolute;
	text-align: center;
	width: 25vw;
	left: 18vw;
	top: 38vw;
	letter-spacing: .6vw;
}
div.release {
	position: absolute;
	width: 35vw;
	height: 12vw;
	left: 67vw;
	background-color: #171717;
	transition: 0.3s ease;
	transform: translate(-50%, -50%);
}
span.h {
	position: absolute;
	background-color: #777777;
	height: 1px;
	width: 2vw;
	border: 0px solid white;
	box-shadow: 0 0 0px white;
	transition: 0.3s ease;
}
span.v {
	position: absolute;
	background-color: #777777;
	height: 2vw;
	width: 1px;
	border: 0px solid white;
	box-shadow: 0 0 0px white;
	transition: 0.3s ease;
}
span.c1 {left: 0; top: 0;}
span.c2 {right: 0; top: 0;}
span.c3 {left: 0; bottom: 0;}
span.c4 {right: 0; bottom: 0;}
img.releaseicon {
	position: absolute;
	top: 10%;
	left: 6%;
	height: 73%;
	width: 20%;
	object-fit: cover;
}
p.releaseheading {
	position: absolute;
	color: white;
	font-family: Raleway;
	font-weight: 200;
	font-size: 1.4vw;
	letter-spacing: .45vw;
	left: 31%;
	top: 3%;
	transition: 0.3s ease;
}
p.releasebody {
	position: absolute;
	color: white;
	font-family: Raleway;
	font-weight: 200;
	font-size: 1vw;
	text-align: justify;
	width: 63%;
	height: 67%;
	left: 31%;
	top: 23%;
	transition: 0.3s ease;
}
#release1 {top: 10vw;}
#release2 {top: 23vw;}
#release3 {top: 36vw;}
/* ... */

